MDEV-13416 mariabackup --backup fails to copy log if LSN is above 4294967295

xtrabackup_copy_log(): Use a 64-bit bitmask (lsn_t), not 32-bit (int).